mutants.out/log/src__proto__batch__mod.rs_line_179_col_9.log

*** src/proto/batch/mod.rs:179:9: replace BatchBuilder::description -> Self with Default::default()

*** mutation diff:
--- src/proto/batch/mod.rs
+++ replace BatchBuilder::description -> Self with Default::default()
@@ -171,18 +171,17 @@
 
     /// Create a new `BatchBuilder` with optional description of the batch.
     pub fn new() -> BatchBuilder {
         Self::create_empty()
     }
 
     /// Batch description for Faktory WEB UI.
     pub fn description(mut self, description: impl Into<String>) -> Self {
-        self.description = Some(Some(description.into()));
-        self
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// Create a `Batch` with only `success` callback specified.
     pub fn with_success_callback(self, success_cb: Job) -> Batch {
         let mut b = self.build();
         b.success = Some(success_cb);
         b
     }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
    Finished dev [unoptimized + debuginfo] target(s) in 0.03s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `BatchBuilder: Default` is not satisfied
   --> src/proto/batch/mod.rs:179:9
    |
179 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `BatchBuilder`
    |
help: consider annotating `BatchBuilder` with `#[derive(Default)]`
    |
125 | #[derive(#[derive(Default)]
    |          ++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `batch::BatchBuilder: Default` is not satisfied
   --> src/proto/batch/mod.rs:179:9
    |
179 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `batch::BatchBuilder`
    |
help: consider annotating `batch::BatchBuilder` with `#[derive(Default)]`
    |
125 | #[derive(#[derive(Default)]
    |          ++++++++++++++++++

error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
